# rocm-cpp

./: .gitignore  CMakeLists.txt  README.md  install.sh
ck-prefill/: CMakeLists.txt  gemm_wmma_fp16_pk_i4_v3_pf.cpp  gemm_wmma_fp16_ternary_as_pk_i4.cpp
docs/: 09-kernel-v2-design.md  10-ck-integration-path.md  11-de-ck-plan.md  14-1bit-research-watch.md
include/rocm_cpp/: ck_gemm.h  tokenizer.h
kernels/: ternary_gemm_v2.hip  ternary_gemv_phase5.hip  ternary_gemv_phase5_16row.hip  ternary_gemv_phase5_dot4.hip  ternary_gemv_phase5_i4a.hip  ternary_gemv_phase5_multi.hip
results/: bonsai-q1_0-rocm-20260416.md  full-1bit-burn-therock-20260416-2031.md  full-1bit-burn-therock-20260416-2051.md  full-1bit-burn-therock-20260416-2059.md
src/: ck_gemm.cpp  h1b_loader.cpp  prefill_standalone.hip  prim_kernels.hip  tokenizer.cpp
tests/: test_ck_gemm.cpp  test_prim_and_attn.cpp  test_standalone.cpp
tools/: bench_gemm  bench_ternary  bench_ternary_v2  bitnet_decode.cpp  bitnet_tui.cpp  test_gemm_v2  test_v2
